--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@sweetalert2/theme-material-ui": "^3.2.0",
+    "anzen-components": "0.0.4",
     "rxjs": "~6.5.4",
     "sweetalert2": "^9.17.1",
     "tslib": "^1.13.0",
